--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -5,6 +5,7 @@ cc_library(
   name = "cpp_jwt",
   hdrs = glob([
     "include/jwt/*.hpp",
+    "include/jwt/detail/*.hpp",
     "include/jwt/json/*.hpp",
     "include/jwt/impl/*.ipp",
   ]),
